--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,9 @@
 body {
-  font-family: "Montserrat";
+  font-family: "Poppins", sans-serif;
   text-align: center;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Montserrat-Bold";
   color: #000000;
 }
 
@@ -15,10 +14,9 @@ p {
 /* Headings */
 
 .big-heading {
-  font-family: "Montserrat-Black";
   font-size: 5rem;
   line-height: 1.5;
-  font-weight: bold;
+  font-weight: 500;
 }
 
 .section-heading {
@@ -51,10 +49,12 @@ p {
 
 .navbar {
   padding: 0 0 4.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .navbar-brand {
-  font-family: "Montserrat";
   font-size: 2.5rem;
   font-weight: bold;
 }
@@ -65,7 +65,6 @@ p {
 
 .nav-link {
   font-size: 1.2rem;
-  font-family: "Montserrat-Light";
 }
 
 .navbar-dark .navbar-brand{
